fix: fix for radio button alignment at smaller widths when hint is pr… (#277)
* fix: fix for radio button alignment at smaller widths when hint is present in the label.

* fix: button alignment/overlap fix on continuations modal.

--- a/app/cdn/assets/_styles/components/radios.scss
+++ b/app/cdn/assets/_styles/components/radios.scss
@@ -3,7 +3,7 @@
  * Can be removed on resolution of: https://dvsa.atlassian.net/browse/VOL-5688
  */
 .govuk-radios__label {
-  .govuk-hint {
-    display: block;
-  }
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
